syntax = "proto3";

package UserProto;

import "google/protobuf/empty.proto";

service UserService {
    rpc getUserById (UserIdRequestDTO) returns (UserResponseDTO) {}
    rpc createUser (UserRequestDTO) returns (google.protobuf.Empty) {}
}
  
message UserIdRequestDTO {
    string id = 1;
}

message UserRequestDTO {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    int32 age = 5;
}
  
message UserResponseDTO {
    string email = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    int32 age = 5;
}