// Original file: src/data/proto/user.proto

export interface UserRequestDTO {
  email?: string;
  password?: string;
  firstName?: string;
  lastName?: string;
  age?: number;
}

export interface UserRequestDTO__Output {
  email?: string;
  password?: string;
  firstName?: string;
  lastName?: string;
  age?: number;
}
