// Original file: src/data/proto/user.proto

export interface UserResponseDTO {
  email?: string;
  password?: string;
  firstName?: string;
  lastName?: string;
  age?: number;
}

export interface UserResponseDTO__Output {
  email?: string;
  password?: string;
  firstName?: string;
  lastName?: string;
  age?: number;
}
